# GPGPUTasks2023

./: .clang-format  .gitignore  ANSWER.MD  ANSWER.md  ANSWERS.md  CMakeCache.txt  CMakeLists.txt  CONCLUSION.md  Makefile  README.md  REPORT.md  Results.md  algorithm.md  aplusb  cmake_install.cmake  mandelbrot  matrix_multiplication  matrix_transpose  radix  results_overview.txt  run.sh  sum
.figures/: capture.webm
.github/: pull_request_example.md
.github/workflows/: cmake.yml
enc_temp_folder/f7146b47e8f8d425e889cf3bfaa3ca67/: main_radix.cpp
libs/: Makefile  cmake_install.cmake
libs/clew/: Makefile
libs/gpu/: Makefile  cmake_install.cmake  hexdumparray
libs/images/: Makefile  cmake_install.cmake
libs/utils/: Makefile  cmake_install.cmake
src/: ClObjects.h  RESULTS.md  Util.h  cl_defines.h  cl_error_print.h  cl_utils.h  error_handler.h  error_print.h  helpers.h  main.cpp  main_bitonic.cpp  main_lbvh.cpp  main_mandelbrot.cpp  main_matrix_multiplication.cpp  main_matrix_transpose.cpp  main_merge.cpp  main_prefix_sum.cpp  main_radix.cpp  main_sum.cpp  matrix_transpose.hpp  merge_sort.hpp  prefix_sum.hpp  sdf_main.glsl  sdf_snow.glsl  utils.h
src/ClWrappers/: Buffer.cpp  Buffer.h  CommandQueue.cpp  CommandQueue.h  Context.cpp  Context.h  Device.cpp  Device.h  Kernel.cpp  Kernel.h  Program.cpp  Program.h  common.h
src/cl/: aplusb.cl  bitonic.cl  clion_defines.cl  counting.cl  lbvh.cl  mandelbrot.cl  matrix_multiplication.cl  matrix_transpose.cl  matrix_transpose_cl.h  merge.cl  merge_diag.cl  merge_simple.cl  merge_simple_local.cl  merge_sort.cl  nbody.cl  (+5 more)
(+5 files in other folders)
